<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="12dp"
            android:layout_margin="15dp"
            android:hint="@string/text_numero1"
            android:inputType="numberDecimal"
            android:id="@+id/edtNumero1">
        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/text_somar"
                android:id="@+id/btnSomar"
                android:onClick="somar"/>



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/text_multiplicar"
                android:id="@+id/btnMultiplicar"
                android:onClick="multiplicar"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/text_subtrair"
                android:id="@+id/btnSubtrair"
                android:onClick="subtrair"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/text_dividir"
                android:id="@+id/btnDividir"
                android:onClick="dividir"/>

        </LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="15dp"
            android:textSize="12dp"
            android:hint="@string/text_numero2"
            android:inputType="numberDecimal"
            android:id="@+id/edtNumero2">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="25dp"
        android:id="@+id/layoutResultado">


    </LinearLayout>




</LinearLayout>